--- a/static/css/site.css
+++ b/static/css/site.css
@@ -850,7 +850,7 @@ svg#risd-seal path {
   height: 100%;
   background-color: black;
   color: white;
-  z-index: 1200;
+  z-index: 5000;
   left: -100%;
   transition: left 0.4s ease-in-out;
   top: 0;
@@ -1319,6 +1319,7 @@ article {
 }
 
 .risd-quadrant {
+  position: relative;
   width: 100%;
   /* min-width: 45vw; */
   height: 50vh;
