--- a/scss/components/poster-moment.scss
+++ b/scss/components/poster-moment.scss
@@ -59,8 +59,8 @@
     align-items: center;
     justify-content: center;
     @include v-tablet {
-        width: 49%;
-        height: 50vh;
+        // width: 49%;
+        // height: 50vh;
     };
 
 }
@@ -113,6 +113,10 @@
     align-items: center;
     justify-content: center;
     border: 4px solid $c-one;
+    // animation: showHide random(5)+s linear infinite;
+    // &:last-child {
+    //     animation: showHide random(4)+s linear infinite;
+    // }
     h2 {
         font-family: $t-font--one;
         font-size: 6vmax;
@@ -169,9 +173,26 @@
     };
 
     @include v-laptop {
-        font-size: 1.7vmax;
+        font-size: 1.4vmax;
     };
     @include v-desktop {
         font-size: 1.3vmax;
     };
+}
+
+.showPosterPart {
+    visibility: visible;
+}
+.hidePosterPart {
+    visibility: hidden;
+}
+
+
+@keyframes showHide {
+    0%, 49% {
+        opacity: 0;
+    }
+    51%, 100% {
+        opacity: 1;
+    }
 }
