not sure what i changed

--- a/templates/partials/poster-moment.html
+++ b/templates/partials/poster-moment.html
@@ -2,8 +2,8 @@
     <div class="risd-quadrant">
         <div class="risd-container"><h1 class="risd-text">R</h1></div>
         <div class="posterItems">
-            <div class="posterItem-box--large">
-                <div class="posterItem-campaignText--large hidePosterPart"><h2><span>Narratives</span> </br>that don’t </br>exist yet.</h2></div>
+            <div class="posterItem-box--large animateText">
+                <div class="posterItem-campaignText--large"><h2><span>Narratives</span> </br>that don’t </br>exist yet.</h2></div>
             </div>
         </div>
     </div>
@@ -11,16 +11,16 @@
         <div class="risd-container"><h1 class="risd-text">I</h1></div>
         <div class="posterItems">
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Colors</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Colors</span> </br>that don’t </br>exist yet.</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Cities</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Cities</span> </br>that don’t </br>exist yet.</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Pedagogies</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Pedagogies</span> </br>that don’t </br>exist yet.</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-inaugurationText--small hidePosterPart">Welcoming </br> our </br>17th </br> President</h3>
+                <h3 class="posterItem-inaugurationText--small animateText">Welcoming </br> our </br>17th </br> President</h3>
             </div>
         </div>
     </div>
@@ -28,24 +28,24 @@
         <div class="risd-container"><h1 class="risd-text">S</h1></div>
         <div class="posterItems">
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Systems</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Systems</span> </br>that don’t </br>exist yet.</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Networks</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Networks</span> </br>that don’t </br>exist yet.</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-inaugurationText--small hidePosterPart">The </br>Inauguration </br>of </br>Rosanne </br>Somerson </br>2015</h3>
+                <h3 class="posterItem-inaugurationText--small animateText">The </br>Inauguration </br>of </br>Rosanne </br>Somerson </br>2015</h3>
             </div>
             <div class="posterItem-box--small">
-                <h3 class="posterItem-campaignText--small hidePosterPart"><span>Materials</span> </br>that don’t </br>exist yet.</h3>
+                <h3 class="posterItem-campaignText--small animateText"><span>Materials</span> </br>that don’t </br>exist yet.</h3>
             </div>
         </div>
     </div>
     <div class="risd-quadrant">
         <div class="risd-container"><h1 class="risd-text">D</h1></div>
         <div class="posterItems">
-            <div class="posterItem-box--large">
-                <div class="posterItem-campaignText--large hidePosterPart"><h2><span>Ideas</span> </br>that don’t </br>exist yet.</h2></div>
+            <div class="posterItem-box--large animateText">
+                <div class="posterItem-campaignText--large"><h2><span>Ideas</span> </br>that don’t </br>exist yet.</h2></div>
             </div>
         </div>
     </div>
