--- a/scss/components/poster-moment.scss
+++ b/scss/components/poster-moment.scss
@@ -188,11 +188,14 @@
 }
 
 
-@keyframes showHide {
-    0%, 49% {
-        opacity: 0;
-    }
-    51%, 100% {
-        opacity: 1;
-    }
-}
+// @keyframes showHide {
+//     0%, 49% {
+//         opacity: 0;
+//     }
+//     51%, 100% {
+//         opacity: 1;
+//     }
+// }
+
+
+// $for $i from 1 through 8
