images no longer repeat at large sizes

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -388,6 +388,7 @@
     background-position: 50% 25%;
     box-sizing: border-box;
     border: 4px solid $c-one;
+    background-size: cover;
 }
 
 //Links
