--- a/scss/site.scss
+++ b/scss/site.scss
@@ -425,5 +425,7 @@
     h3 {
         font-family: $t-font--one;
         text-align: center;
+        max-width: 16em;
+        margin: 0 auto;
     }
 }
