--- a/static/css/site.css
+++ b/static/css/site.css
@@ -2342,5 +2342,7 @@ article {
 .externalLinks h3 {
   font-family: "Circular", "Helvetica", "sans-serif";
   text-align: center;
+  max-width: 16em;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=site.css.map */
