--- a/scss/site.scss
+++ b/scss/site.scss
@@ -100,6 +100,14 @@
     margin: $l-space--large 0;
     @include l-textWidth;
 }
+.inauguration-accommodation {
+    margin: $l-space--large 0;
+    @include l-textWidth;
+}
+.inauguration-accommodation--title {
+    font-family: $t-font--one;
+    margin-bottom: $l-space--medium;
+}
 
 
 //President's Bio page
