--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1894,6 +1894,16 @@ article {
   opacity: 0.75;
 }
 
+::-moz-selection {
+  background: black;
+  color: white;
+}
+
+::selection {
+  background: black;
+  color: white;
+}
+
 .campaign {
   margin: 13.328rem 0;
 }
@@ -1999,6 +2009,12 @@ article {
   max-width: 30em;
   margin-left: auto;
   margin-right: auto;
+}
+.inauguration-accommodation h3 {
+  font-weight: bold;
+  text-align: left;
+  margin-top: 1.666rem;
+  margin-bottom: 0.833rem;
 }
 .inauguration-accommodation a {
   border-bottom: 2px solid black;
