--- a/scss/site.scss
+++ b/scss/site.scss
@@ -104,6 +104,30 @@
     margin: $l-space--large 0;
     @include l-textWidth;
 }
+.inauguration-info--events{
+    margin: $l-space--large 0;
+    @include l-textWidth;
+    h4{
+        font-family:$t-font--one;
+        font-size:2rem;
+        text-align:left;
+        margin-bottom:1em;
+        // margin-top:1em;
+    }
+    h5{
+        font-family:$t-font--one;
+        text-align:left;
+        font-size:1.5rem;
+    }
+    p{
+        margin-bottom:0em;
+        margin-left:1em;
+    }
+    p + p{
+        margin-bottom:2em;
+    }
+}
+
 .inauguration-accommodation {
     margin: $l-space--large 0;
     h3{
