--- a/scss/site.scss
+++ b/scss/site.scss
@@ -149,6 +149,67 @@
     margin-bottom: $l-space--medium;
 }
 
+.inauguration-videoGallery {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.inauguration-video--container {
+    flex-grow: 1;
+    min-width: 40%;
+    border: 4px solid $c-one;
+    box-sizing: border-box;
+    margin-bottom: $l-space--medium;
+    &:nth-child(2n+1) {
+        margin-right: $l-space--medium;
+    }
+    &:last-child,
+    &:nth-last-child(2):nth-child(odd) {
+        margin-right: 0;
+    }
+}
+.inauguration-video--item {
+    width: 100%;
+    height: 0;
+    position: relative;
+    padding-bottom: 56.25%;
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.inauguration-imageGallery {
+    width: 100%;
+    box-sizing: border-box;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: center;
+    &:after {
+      content: ' ';
+      display: block;
+      clear: both;
+    }
+}
+.inauguration-image--link {
+    width: 49%;
+    box-sizing: border-box;
+    // margin-bottom: $l-space--medium;
+    // margin-right: $l-space--medium;
+}
+.inauguration-image--item {
+    border: 4px solid $c-one;
+    box-sizing: border-box;
+    width: 100%;
+}
+.inauguration-image--gutter {
+    width: 2%;
+}
+
 
 //President's Bio page
 .bio {
