--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -75,7 +75,7 @@
       {# <script src="/static/javascript/jquery.flexslider.js"></script> #}
       <script src="/static/javascript/imagesloaded.pkgd.js"></script>
       <script src="/static/javascript/masonry.js"></script>
-      <script src="/static/javascript/main.js"></script>
+      <script src="/static/javascript/site.js"></script>
       <!-- endbuild -->
 
       {% block scripts_extra %}{% endblock %}
