--- a/scss/site.scss
+++ b/scss/site.scss
@@ -157,17 +157,20 @@
 }
 .inauguration-video--container {
     flex-grow: 1;
-    min-width: 40%;
+    min-width: 100%;
     border: 4px solid $c-one;
     box-sizing: border-box;
     margin-bottom: $l-space--medium;
-    &:nth-child(2n+1) {
-        margin-right: $l-space--medium;
-    }
-    &:last-child,
-    &:nth-last-child(2):nth-child(odd) {
-        margin-right: 0;
-    }
+    @include v-tablet {
+        min-width: 40%;
+        &:nth-child(2n+1) {
+            margin-right: $l-space--medium;
+        }
+        &:last-child,
+        &:nth-last-child(2):nth-child(odd) {
+            margin-right: 0;
+        }
+    };
 }
 .inauguration-video--item {
     width: 100%;
@@ -196,10 +199,13 @@
     }
 }
 .inauguration-image--link {
-    width: 49%;
+    width: 100%;
     box-sizing: border-box;
     // margin-bottom: $l-space--medium;
     // margin-right: $l-space--medium;
+    @include v-tablet {
+        width: 49%;
+    };
 }
 .inauguration-image--item {
     border: 4px solid $c-one;
@@ -207,7 +213,10 @@
     width: 100%;
 }
 .inauguration-image--gutter {
-    width: 2%;
+    width: 0;
+    @include v-tablet {
+        width: 2%;
+    };
 }
 
 
