--- a/static/css/site.css
+++ b/static/css/site.css
@@ -2069,16 +2069,21 @@ article {
   -webkit-flex-grow: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
-  min-width: 40%;
+  min-width: 100%;
   border: 4px solid black;
   box-sizing: border-box;
   margin-bottom: 2.499rem;
 }
-.inauguration-video--container:nth-child(2n+1) {
-  margin-right: 2.499rem;
-}
-.inauguration-video--container:last-child, .inauguration-video--container:nth-last-child(2):nth-child(odd) {
-  margin-right: 0;
+@media (min-width: 768px) {
+  .inauguration-video--container {
+    min-width: 40%;
+  }
+  .inauguration-video--container:nth-child(2n+1) {
+    margin-right: 2.499rem;
+  }
+  .inauguration-video--container:last-child, .inauguration-video--container:nth-last-child(2):nth-child(odd) {
+    margin-right: 0;
+  }
 }
 
 .inauguration-video--item {
@@ -2106,8 +2111,13 @@ article {
 }
 
 .inauguration-image--link {
-  width: 49%;
+  width: 100%;
   box-sizing: border-box;
+}
+@media (min-width: 768px) {
+  .inauguration-image--link {
+    width: 49%;
+  }
 }
 
 .inauguration-image--item {
@@ -2117,7 +2127,12 @@ article {
 }
 
 .inauguration-image--gutter {
-  width: 2%;
+  width: 0;
+}
+@media (min-width: 768px) {
+  .inauguration-image--gutter {
+    width: 2%;
+  }
 }
 
 .biography figure[data-type=quote] {
