--- a/static/css/site.css
+++ b/static/css/site.css
@@ -2060,26 +2060,36 @@ article {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
-  -webkit-justify-content: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-top: 6.664rem;
 }
 
 .inauguration-video--container {
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  min-width: 100%;
+  width: 100%;
   border: 4px solid black;
   box-sizing: border-box;
-  margin-bottom: 2.499rem;
+  margin-bottom: 2%;
 }
 @media (min-width: 768px) {
   .inauguration-video--container {
-    min-width: 40%;
+    width: 49%;
   }
   .inauguration-video--container:nth-child(2n+1) {
-    margin-right: 2.499rem;
+    margin-right: 2%;
+  }
+  .inauguration-video--container:last-child, .inauguration-video--container:nth-last-child(2):nth-child(odd) {
+    margin-right: 0;
+  }
+}
+@media (min-width: 1824px) {
+  .inauguration-video--container {
+    width: 32%;
+    margin-right: 2%;
+  }
+  .inauguration-video--container:nth-child(3n) {
+    margin-right: 0;
   }
   .inauguration-video--container:last-child, .inauguration-video--container:nth-last-child(2):nth-child(odd) {
     margin-right: 0;
@@ -2103,6 +2113,7 @@ article {
 .inauguration-imageGallery {
   width: 100%;
   box-sizing: border-box;
+  margin-top: 6.664rem;
 }
 .inauguration-imageGallery:after {
   content: ' ';
@@ -2119,6 +2130,16 @@ article {
     width: 49%;
   }
 }
+@media (min-width: 1024px) {
+  .inauguration-image--link {
+    width: 32%;
+  }
+}
+@media (min-width: 1824px) {
+  .inauguration-image--link {
+    width: 23.5%;
+  }
+}
 
 .inauguration-image--item {
   border: 4px solid black;
@@ -2130,6 +2151,16 @@ article {
   width: 0;
 }
 @media (min-width: 768px) {
+  .inauguration-image--gutter {
+    width: 2%;
+  }
+}
+@media (min-width: 1024px) {
+  .inauguration-image--gutter {
+    width: 2%;
+  }
+}
+@media (min-width: 1824px) {
   .inauguration-image--gutter {
     width: 2%;
   }
