--- a/static/css/site.css
+++ b/static/css/site.css
@@ -2166,6 +2166,23 @@ article {
   }
 }
 
+.inauguration-image--caption {
+  font-family: "Circular", "Helvetica", "sans-serif";
+  font-size: 1.25rem;
+  text-align: center;
+  margin-bottom: 1.666rem;
+}
+@media (min-width: 768px) {
+  .inauguration-image--caption {
+    margin-bottom: 0.833rem;
+  }
+}
+@media (min-width: 1024px) {
+  .inauguration-image--caption {
+    margin-bottom: 0;
+  }
+}
+
 .biography figure[data-type=quote] {
   margin: 0;
   padding: 0;
