--- a/static/css/site.css
+++ b/static/css/site.css
@@ -1979,6 +1979,18 @@ article {
           flex-wrap: wrap;
 }
 
+.inauguration-text {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
 .inauguration-date, .inauguration-address {
   width: 100%;
   text-align: center;
